<resources>
    <string name="app_name">Mixing Auto Paint</string>
    <string name="add_mix_paint">add mix paint</string>
    <string name="in_paint">Number of parts of paint</string>
    <string name="in_hardener">Number of parts of hardener</string>
    <string name="in_diluent">Number of parts of diluent</string>
    <string name="paint_mass">Weight of finished paint</string>
    <string name="bt_save">Calc and Save</string>
    <string name="bt_save_after_edit">Save</string>
    <string name="error_msg">The field is empty, if the component is missing, enter 0</string>
    <string name="in_title">Enter Title</string>
    <string name="gram_in_list">Gram</string>
    <string name="parts_in_list">mixing ratio (paint, hardener, diluent)</string>
    <string name="mix1_list">"Pour "</string>
    <string name="mix2_list">"gm of paint into the container, add "</string>
    <string name="mix3_list">"gm of hardener = "</string>
    <string name="mix4_list">"gm and top up "</string>
    <string name="mix5_list">gm of diluent</string>
    <string name="confirm_delete">YES</string>
    <string name="cancel_delete">NO</string>
    <string name="msg_delete">Are you sure to want to delete?</string>
    <string name="title_delete">Confirm delete</string>
    <string name="nav_list">List of paint</string>
    <string name="nav_add">Add new mix paint</string>
    <string name="detail_edit">edit</string>
    <string name="detail_notification">show in notification</string>
    <string name="detail_name_fragment">Paint mix detail view</string>
    <string name="channel_name" translatable="false">MixingAutoPaint</string>
    <string name="channel_description" translatable="false">Show Mix Pain</string>
    <string name="title_error_msg">The fields is empty</string>
    <string name="edit_paint">Edit paint</string>
    <string name="swipe_to_del">Swipe right to delete</string>

</resources>