<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_nav"
    app:startDestination="@id/paintListFragment">

    <fragment
        android:id="@+id/paintListFragment"
        android:name="ru.kitfactory.mixingautopaint.presentation.listFragment.PaintListFragment"
        android:label="@string/nav_list"
        tools:layout="@layout/fragment_paint_list">
        <action
            android:id="@+id/action_paintListFragment_to_addMixPaintFragment"
            app:destination="@id/addMixPaintFragment"
            app:enterAnim="@anim/from_list"
            app:popEnterAnim="@anim/to_list" />
        <action
            android:id="@+id/action_paintListFragment_to_detailMixPaintFragment"
            app:destination="@id/detailMixPaintFragment" />
    </fragment>
    <fragment
        android:id="@+id/addMixPaintFragment"
        android:name="ru.kitfactory.mixingautopaint.presentation.addFragment.AddMixPaintFragment"
        android:label="@string/nav_add"
        tools:layout="@layout/add_mix_paint_fragment">
        <action
            android:id="@+id/action_addMixPaintFragment_to_paintListFragment"
            app:destination="@id/paintListFragment"
            app:enterAnim="@anim/to_list"
            app:popEnterAnim="@anim/from_list" />
    </fragment>
    <fragment
        android:id="@+id/detailMixPaintFragment"
        android:name="ru.kitfactory.mixingautopaint.presentation.detailFragment.DetailMixPaintFragment"
        android:label="@string/detail_name_fragment"
        tools:layout="@layout/detail_mix_paint_fragment" >
        <action
            android:id="@+id/action_detailMixPaintFragment_to_paintListFragment"
            app:destination="@id/paintListFragment" />
        <argument
            android:name="currentPaint"
            app:argType="ru.kitfactory.mixingautopaint.models.PaintAppModel" />
        <action
            android:id="@+id/action_detailMixPaintFragment_to_editFragment"
            app:destination="@id/editFragment" />
    </fragment>
    <fragment
        android:id="@+id/editFragment"
        android:name="ru.kitfactory.mixingautopaint.presentation.editFragment.EditFragment"
        android:label="@string/edit_paint"
        tools:layout="@layout/edit_fragment" >
        <action
            android:id="@+id/action_editFragment_to_paintListFragment"
            app:destination="@id/paintListFragment" />
        <argument
            android:name="currentPaintForEdit"
            app:argType="ru.kitfactory.mixingautopaint.models.PaintAppModel" />
    </fragment>
</navigation>